# lazy-dani

./: .gitignore  .htmlhintrc  init.lua  keymaps.lua  lazy-lock.json  pyproject.toml  test.html  test.lua  test.py
lua/config/: autocmds.lua  finder.lua  keymaps.lua  lazy.lua  options.lua
lua/config/keymaps/: delete_keymaps.lua  general.lua  neotree.lua  python_terminal.lua  telescope.lua  test.lua
lua/config/utils/: finders.lua  multigrep.lua  search_file.lua
lua/lspconfig/: markuplint.lua
lua/plugins/: blink.lua  bufferline.lua  colorcheme.lua  colorschemes.lua  comment.lua  copilot.lua  finder.lua  fromatting.lua  linting.lua  lspconfig.lua  mason.lua  neogen.lua  none-ls.lua  nvim-web-devicons.lua  telescope.lua  todo-comments.lua  trouble.lua
lua/plugins/colorscheme/: one_dark.lua
