[project]
name = "your_project_name"
version = "0.1.0"
description = "A short description of your project"
authors = [
    { name="Your Name", email="your.email@example.com" }
]

[tool.ruff]
# Set the line length
line-length = 100

# Enable specific rule categories or codes
select = ["ALL"]

# Ignore specific rules
ignore = ["RET504", "TD002", "TD001", "TD003", "PD015", "S101", "DTZ005"]
